[gd_scene load_steps=6 format=3 uid="uid://bgsky6jc7fsln"]

[ext_resource type="Texture2D" uid="uid://c73con2s1825b" path="res://Sprites/STICK1.png" id="1_6mrpb"]
[ext_resource type="Script" path="res://Scenes/Items/STICK/STICK.gd" id="1_iwm2j"]
[ext_resource type="Resource" uid="uid://cgj4e22pymife" path="res://Inventory/items/STICK.tres" id="2_855cg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oyoxh"]
size = Vector2(32, 32)

[sub_resource type="FontFile" id="FontFile_3mhsl"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_iwm2j")
item = ExtResource("2_855cg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_oyoxh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6mrpb")

[node name="Label" type="Label" parent="."]
offset_left = -16.0
offset_top = -32.0
offset_right = 25.0
offset_bottom = -9.0
theme_override_fonts/font = SubResource("FontFile_3mhsl")
text = "STICK
"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
